# backend/internal/interface/api/rest/dto/response/response_server.go
@@ -10,6 +10,17 @@ type NewServerResponse struct {
 	Id uuid.UUID `json:"id"`
 }
 
+type ServerPreview struct {
+	Id        uuid.UUID
+	Name      string
+	IconUrl   string
+	BannerUrl string
+}
+
+type GetServersResponse struct {
+	Result []ServerPreview
+}
+
 type GetServerResponse struct {
 	Id          uuid.UUID
 	CreatedAt   time.Time
